# qt-extensions-elevation

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/QtExtensionsElevation/: Algorithms  PathAnalyzer  Tile  TileStorage  Types
src/c++/: qtexelevation-algorithms.c++  qtexelevation-algorithms.h  qtexelevation-errorcodes.h  qtexelevation-tile.c++  qtexelevation-tile.h  qtexelevation-tilestorage.c++  qtexelevation-tilestorage.h  qtexelevation-types.h
src/c++/utils/: qtexelevation-polylineanalyzer.c++  qtexelevation-polylineanalyzer.h
